@@ -3,7 +3,7 @@
 
 ## Introduction
 
-Java _virtual threads_ are lightweight threads that are designed to make concurrent applications both simpler and more scalable. Pre-existing Java threads were based on operating system threads, which proved insufficient to meet the demands of modern concurrency. Applications such as databases or web servers should serve millions of concurrent requests, but the Java runtime cannot efficiently handle more than a few thousand. If programmers continue to use threads as the unit of concurrency, they will severely limit the throughput of their applications. Alternatively, they can switch to various _asynchronous_ APIs ([futures/promises](https://github.com/aliakh/demo-java-completablefuture/blob/master/readme.md), [reactive streams](https://github.com/aliakh/demo-java-reactive-streams/blob/master/readme.md), etc.), which are more difficult to develop, debug and understand, but which do not block operating system threads and therefore provide much better performance.
+Java _virtual threads_ are lightweight threads that are designed to make concurrent applications both simpler and more scalable. Pre-existing Java threads were based on operating system threads, which proved insufficient to meet the demands of modern concurrency. Applications such as databases or web servers should serve millions of concurrent requests, but the Java runtime cannot efficiently handle more than a few thousand. If programmers continue to use threads as the unit of concurrency, they will severely limit the throughput of their applications. Alternatively, they can switch to various _asynchronous_ APIs ([futures](https://github.com/aliakh/demo-java-completablefuture/blob/master/readme.md), [reactive streams](https://github.com/aliakh/demo-java-reactive-streams/blob/master/readme.md), etc.), which are more difficult to develop, debug, and understand, but do not block operating system threads and therefore provide much better performance.
 
 The main goal of virtual threads is to add user-space threads managed by the Java runtime, which would be used alongside the existing heavyweight, kernel-space threads managed by operating systems. Virtual threads are much more lightweight than kernel-mode threads in memory usage, and the overhead of context switching and blocking among them is close to zero. Programmers can create millions of virtual threads in a single JVM instance, and get better performance using much simpler _synchronous blocking_ code.
 
@@ -18,9 +18,9 @@ _Platform threads_ are mapped one-to-one to kernel-mode threads scheduled by the
 
 >Platform threads are suitable for executing all types of tasks, but their use in long-blocking operations is a waste of limited resources.
 
-_Virtual threads_ are user-mode threads scheduled by the Java virtual machine rather than the operating system. Virtual threads are mappen many-to-many to kernel-mode threads scheduled by the operating system. A Java virtual machine may support millions of virtual threads.
+_Virtual threads_ are user-mode threads scheduled by the Java virtual machine rather than the operating system. Virtual threads are mapped many-to-many to kernel-mode threads scheduled by the operating system. A Java virtual machine may support millions of virtual threads.
 
->Virtual threads are suitable for executing tasks that spend most of the time blocked, and are not intended for long-running CPU intensive operations.
+>Virtual threads are suitable for executing tasks that spend most of the time blocked and are not intended for long-running CPU-intensive operations.
 
 Many virtual threads employ a few platform threads used as _carrier threads_. When the Java runtime schedules a virtual thread, it _mounts_ the virtual thread on a carrier thread. When the virtual thread performs a blocking I/O operation or locking, the virtual thread can _unmount_ from its carrier thread. When the carrier thread is free, the Java runtime scheduler can mount a different virtual thread on it.
 
@@ -67,7 +67,7 @@ thread.join();
 ```
 
 
-<sub>For the platform thread builder you can specify additional parameters: thread group, <em>daemon</em> flag, priority and stack size.</sub>
+<sub>For the platform thread builder, you can specify additional parameters: thread group, <em>daemon</em> flag, priority, and stack size.</sub>
 
 The _static factory method_ allows you to create a virtual thread with default parameters by specifying only a _Runnable_ task. (Note that by default, the virtual thread name is empty).
 
@@ -117,7 +117,7 @@ Virtual threads almost fully support the API and semantics of the pre-existing _
 
 ### Write blocking synchronous code in the thread-per-task style
 
-Blocking a platform thread needlessly keeps the operand system thread (a relatively limited resource) from doing useful work. Therefore, non-blocking asynchronous frameworks (Lightbend Akka Streams, Pivotal Project Reactor, Netflix RxJava, etc.) have been developed to reduce threads blocking and increase CPU resource utilization. But their disadvantage is a more complex concurrent model, which makes it harder for programmers to develop, debug and understand such code. Such non-blocking asynchronous frameworks that use their own techniques of preventing thread blocking would not benefit much from using virtual threads.
+Blocking a platform thread needlessly keeps the operand system thread (a relatively limited resource) from doing useful work. Therefore, non-blocking asynchronous frameworks (Lightbend Akka Streams, Pivotal Project Reactor, Netflix RxJava, etc.) have been developed to reduce thread blocking and increase CPU resource utilization. However, their disadvantage is a more complex concurrent model, which makes it harder for programmers to develop, debug, and understand such code. Such non-blocking asynchronous frameworks that use their techniques of preventing thread blocking would not benefit much from using virtual threads.
 
 In contrast, blocking a virtual thread is cheap and encouraged. It allows virtual threads to write blocking synchronous code in a simple thread-per-request style. This allows developers to create simpler but still effective concurrent code.
 
@@ -141,7 +141,7 @@ CompletableFuture.supplyAsync(this::getPriceInEur)
 ```
 
 
-The following blocking synchronous code will benefit from using virtual threads, because long-running tasks are executed in parallel in separate virtual threads:
+The following blocking synchronous code will benefit from using virtual threads because long-running tasks are executed in parallel in separate virtual threads:
 
 
 ```
@@ -162,7 +162,7 @@ try (ExecutorService executorService = Executors.newVirtualThreadPerTaskExecutor
 
 ### Do not pool virtual threads
 
-Creating a platform thread is a rather time-consuming process, as it requires the creation of an operating system thread. Thread pools executors are designed to reuse threads between tasks and reduce this time. They contain a pool of pre-created worker threads to which _Runnable_ and _Callable_ tasks are passed through a _BlockingQueue_ instance. A worker thread is not destroyed after executing one task, but is used to execute the next task read from the task queue.
+Creating a platform thread is a rather time-consuming process, as it requires the creation of an operating system thread. Thread pool executors are designed to reuse threads between tasks and reduce this time. They contain a pool of pre-created worker threads to which _Runnable_ and _Callable_ tasks are passed through a _BlockingQueue_ instance. A worker thread is not destroyed after executing one task but is used to execute the next task read from the task queue.
 
 Unlike platform threads, creating virtual threads is a fast process. Therefore, there is no need to create a pool of virtual threads. If the program logic requires the use of an _ExecutorService_ instance, use an executor specially designed for virtual threads, created in the static factory method _Executors.newVirtualThreadPerTaskExecutor_. This executor does not use a thread pool and creates a new virtual thread for each submitted task. Moreover, this executor itself is lightweight, and you can create and close it at any desired location within the _try-with-resources_ block.
 
@@ -197,7 +197,7 @@ try (var executorService = Executors.newVirtualThreadPerTaskExecutor()) {
 
 The main objective of thread pools is to reuse threads when executing many tasks. When tasks are submitted to a thread pool, they are placed in a task queue from which they are retrieved by worker threads for execution (see _ThreadPoolExecutor#workQueue_). An additional objective in using thread pools wi_th a fixed number of worker threads_ is that they can be used to limit the concurrency of a particular operation (for example, an external resource cannot handle more than N concurrent requests).
 
-But since there is no need to reuse virtual threads, there is no need to use thread pools with a fixed number of worker threads. Instead, it is better to use semaphores with the same number of permissions to limit concurrency. A semaphore also contains a queue inside it, not of tasks, but of threads blocked on it (see _AbstractQueuedSynchronizer#head_). So this replacement is quite functionally equivalent.
+However, since there is no need to reuse virtual threads, there is no need to use thread pools with a fixed number of worker threads. Instead, it is better to use semaphores with the same number of permissions to limit concurrency. A semaphore also contains a queue inside it, not of tasks, but of threads blocked on it (see _AbstractQueuedSynchronizer#head_). So this replacement is quite functionally equivalent.
 
 The following code, which uses a fixed pool of threads to limit concurrency when accessing some shared resource, will not benefit from the use of virtual threads:
 
@@ -232,7 +232,7 @@ public Object useSemaphoreToLimitConcurrency() throws InterruptedException {
 
 ### Use thread-local variables carefully or switch to scoped values
 
-To achieve better scalability of virtual threads, you should reconsider using _thread-local variables_ and _inheritable-thread-local variables_. Thread-local variables provide each thread with its own copy of a variable. A thread-local variable works as an implicit, thread-bound parameter and allows passing data from a caller to a callee through a sequence of intermediate methods.
+To achieve better scalability of virtual threads, you should reconsider using _thread-local variables_ and _inheritable-thread-local variables_. Thread-local variables provide each thread with its copy of a variable. A thread-local variable works as an implicit, thread-bound parameter and allows passing data from a caller to a callee through a sequence of intermediate methods.
 
 Virtual threads support thread-local behavior in the same way as platform threads. But because virtual threads can be very numerous, negative design features of local variables can be applied much more significantly:
 
@@ -308,7 +308,9 @@ public void useScopedValue() {
 
 ### Use synchronized blocks and methods carefully or switch to reentrant locks
 
-To improve scalability when using virtual threads, you should revise _synchronized_ blocks and methods to avoid frequent and long-lived pinning (such as I/O operations). Pinning is not a problem if such operations are short-lived (such as in-memory operations) or infrequent. As an alternative, you can replace these _synchronized_ blocks and methods with _ReentrantLock_ that also guarantees mutually exclusive access.
+To improve scalability when using virtual threads, you should revise _synchronized_ blocks and methods to avoid frequent and long-lived pinning (such as I/O operations). Pinning is not a problem if such operations are short-lived (such as in-memory operations) or infrequent. As an alternative, you can replace these _synchronized_ blocks and methods with _ReentrantLock_ which also guarantees mutually exclusive access.
+
+To identify pinning, you can use the JVM flag _-Djdk.tracePinnedThreads=full_ when executing your application.
 
 The following code uses a _synchronized_ block with an explicit object lock that causes pinning of virtual threads:
 
@@ -346,8 +348,8 @@ code examples
 
 ## Conclusion
 
-Dan Kegel’s well-known article [The C10K problem](http://www.kegel.com/c10k.html) about 10,000 concurrent connections in web servers was relevant in 2014. After ten years, a mainstream web server needs to handle 10,000,000 After 10 years, the main web server needs to handle 10 million simultaneous connections.connections. When trying to achieve similar performance in Java virtual machines, it is the threads that are the bottleneck. When a mainstream Java web server stops being unable to handle several thousand concurrent connections, it still has plenty of other available resources: sockets, memory, CPU time.
+Dan Kegel’s well-known article [The C10K problem](http://www.kegel.com/c10k.html) about 10,000 concurrent connections in web servers was relevant in 2014. After ten years, a mainstream web server needs to handle 10,000,000 simultaneous connections. When trying to achieve similar performance in Java virtual machines, it is the threads that are the bottleneck. When a mainstream Java web server stops being unable to handle several thousand concurrent connections, it still has plenty of other available resources: sockets, memory, and CPU time.
 
-Using asynchronous solutions such as asynchronous servlet APIs or even reactive web runtimes such as Netty do not solve the problem completely. Such reactive applications work well only when all pipelines from the web server to the storage are reactive and non-blocking. But there are still a lot of synchronous HTTP clients, databases, and message brokers around because such reactive applications are harder to develop, debug, and understand.
+Using asynchronous solutions such as asynchronous Servlet APIs or reactive web runtimes such as Netty or Undertow does not solve the problem completely. Such reactive applications work well only when all pipelines from the web server to the storage are reactive and non-blocking. However, there are still a lot of synchronous HTTP clients, databases, message brokers, etc. around because such reactive applications are harder to develop, debug, and understand.
 
-Java _virtual threads_ is an attempt to achieve the same level of throughput that Golang is already demonstrating with its _goroutines_ on the same hardware. Considerable work has been done in the Java base library to make the existing threading and I/O classes compatible with virtual threads. In order for your application to benefit from the use of virtual threads, you should follow known guidelines. As the rule of thumbs, to benefit from virtual threads your application must have thousands threads performing intensive blocking I/O operation.
+Java _virtual threads_ are an attempt to achieve the same level of throughput that Golang is already demonstrating with its _goroutines_ on the same hardware. Considerable work has been done in the Java core library to make the existing threading and I/O classes compatible with virtual threads. For your application to benefit from the use of virtual threads, you should follow known guidelines. As a rule of thumb, to benefit from virtual threads your application must have thousands of threads performing intensive blocking I/O operation.
